--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -13,10 +13,13 @@
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning",
+      "Default": "Information",
       "Microsoft": "Warning",
       "System": "Warning"
-    },
-    "AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnectionString": "Copy connection string from Application Insights Resource Overview"
   }
 }
